# SC4051_dist_system_proj

./: .gitignore  API_Specification.md  Main.java  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
C++/: Main.cpp
C++/utils/: ByteBuffer.cpp  ByteReader.cpp  Serializer.cpp
Client/: CMakeLists.txt  Client.cpp  TestServer.cpp
Client/include/: ByteBuffer.hpp  ByteReader.hpp  Client.hpp  Constants.hpp  Parity.hpp  RequestHandler.hpp  RequestMessage.hpp  ResponseParser.hpp  Serializer.hpp  Socket.hpp  UserInterface.hpp
Client/src/: ByteBuffer.cpp  ByteReader.cpp  Client.cpp  Parity.cpp  RequestHandler.cpp  RequestMessage.cpp  ResponseParser.cpp  Serializer.cpp  Socket.cpp  UserInterface.cpp  main.cpp
Client/utils/: ByteBuffer.hpp  ByteReader.hpp  Serializer.cpp  Serializer.hpp
Java/utils/: ByteBuffer.java
Server/: API_Responses.md  API_Specification.md  Dockerfile  Operation.java  RequestMessage.java  Server.java  UDPClient.java
Server/models/: Availability.java  Avaliablility.java  Booking.java  BookingDetails.java  Facility.java  Rating.java  TimeSlot.java
Server/services/: FacilityFactory.java  Monitor.java  MonitorService.java  RequestHistory.java  RequestInfo.java
Server/utils/: ByteBuffer.java  ByteReader.java  Parity.java  Parser.java  Serializer.java
utils/: ByteReader.java  Serializer.java
utils_cpp/: all.cpp  all_v2.cpp
(+5 files in other folders)
